--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -71,7 +71,7 @@ The second phase of the 1kGP implemented multiple technological and analytical i
 
 Yet, because of the extraordinary value of freely available data, early data from the 1kGP is still widely used to impute untyped variants, to estimate allele frequencies, and to answer a wide range of medical and evolutionary questions.
 This raises the question of whether and how such legacy data should be included in contemporary analyses alongside more recent cohorts.
-\todo{Mafessoni et al. recently identified batch effects in the 1kGP by looking for individuals with excess LD among distant variants. \citep{mafessoni2018turning}.}
+Mafessoni et al. recently identified batch effects in the 1kGP by looking for individuals with excess LD among distant variants. \citep{mafessoni2018turning}.
 Here we point out how these and additional unreported batch effects in the early phases of the 1kGP lead to incorrect genetic conclusions through population genetic analyses and spurious GWAS associations as a result of imputation using the 1kGP as a reference.
 
 \subsection{Mutational Signatures}
@@ -187,8 +187,8 @@ An outlying 10kb region in chromosome 17 (bases : 22,020,000 to  22,030,000) has
 Distribution of association statistics in this region is provided in Figure \ref{Top10}.
 By contrast, variants that do not pass the 1kGP strict mask are more unevenly distributed across the genome (Figure \ref{VariantDensity}).
 
-\todo{The mutational 3-mer substitution patterns of this list of variants from the GCAT model is similar to the signature identified in the single population test of the 1kGP JPT in that there is an enrichment in *AC${\rightarrow}$*CC.
-There is also an enrichment of mutations from TAC, TCT, and TGT to the homonucleotide TTT. }\sgcomment{Point to figure}
+The mutational 3-mer substitution patterns of this list of variants from the GCAT model is similar to the signature identified in the single population test of the 1kGP JPT in that there is an enrichment in *AC${\rightarrow}$*CC.
+There is also an enrichment of mutations from TAC, TCT, and TGT to the homonucleotide TTT (Figure \ref{strict_gcat_mutational_enrichment}).
 
 
 A recent publication by Mafessoni et al. also identified a batch effect in the 1kGP using a method that uses linkage disequilibrium rather than quality metrics to identify nearly 20,000 suspicious variants \citep{mafessoni2018turning} (Figure \ref{Mafessoni_MutSpect}).
@@ -210,17 +210,15 @@ These results indicate that there may a multitude of batch effects in the 1kGP t
 \caption{Number and proportion of $Q$-associated variants passing the 1000 Genomes Project strict mask per category. 
 Variants that are flagged by the 1000 Genomes Project nested repeat mask file were analyzed separately for FDR calculation. SNPs and INDELs were also analyzed separately.
 A total of 15,270 are statistically significantly associated to $Q$. 
-\todo{The grey text is the proportion of $Q$-associated variants per category.}
+The grey text is the proportion of $Q$-associated variants per category.
 The number of variants included in the analysis for SNPs, SNPs in repeat regions, INDELs and INDELs in repeat regions are  19,846,786, 6,312,620, 1,770,315 and 586,342 respectively.}
 \label{sigTable}
 \end{table}
 
 \subsection{Cell line or technical artifact}
-\todo{
 To assess whether $Q$-associated variants result from sequencing artifacts, we compare the original 1kGP sequence data to more recent sequencing efforts using the same cell lines.
 Variants that do not reproduce across cohorts are likely the result of sequencing artifacts. 
 Variants that do reproduce across studies could result from (recurrent) cell line mutations or, more likely, from existing variants whose accurate genotyping depends on $Q$.   
-}
 
 In 2017, Lan et al. resequenced 83 Han Chinese individuals from the 1kGP \citep{Lan2017}. 
 %To assess consistency between the two datasets, we consider consistency of genotype calls for $Q$-associated variants that are predicted to be polymorphic in these 83 individuals according to the 1kGP.
@@ -494,7 +492,7 @@ There are 23,111  variants ( 55\% ) that are $Q$-associated but not LD-associate
 \begin{figure}[tbp]
 \centering
 \includegraphics[width=15cm,keepaspectratio]{../Figures/VariantDensity.jpg}
-\caption{The number of $Q$-associated variants per 10kb window across the genome. \sgcomment{Any reason why this is plotted until 35?}
+\caption{The number of $Q$-associated variants per 10kb window across the genome.
 Grey bars indicate regions within and black bars indicate regions outside the 1000 Genomes Project strict mask.
 One region not flagged by the 1000 Genomes Project strict mask in chromosome 17 has more than 10 variants per window.}  
 \label{VariantDensity}
