update fig text

--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -111,6 +111,7 @@ This GWAS identified $1034$ SNPs associated to the average $Q$ of SNPs mapped fo
 ($587$ SNPs had  $p < 10^{-8}.$)
 \textbf{B} 
 Joint frequency spectrum plot of the Japanese from the 1000 Genomes Project and a more recent Japanese dataset from Nagahama.
+The plot is zoomed in on frequencies below 0.5 for clarity.
 The size of blue dots are proportional to the number of variants in a given frequency bin that associate with $Q$ in the JPT. 
 \textbf{C} 
 Mutation spectrum of the 1034 variants that associated with $Q$ in the JPT($p < 10^{-6}$), compared to the expectation from the distribution of all SNPs.
