minor text, pre meeting push

--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -268,7 +268,7 @@ To distinguish between variants with weak but significant association with $Q$ f
 The majority (92.7\%) of the $Q$-associated variants are strongly biased in that they are more than twice as frequent in individuals with low-$Q$ compared to high-$Q$ data.
 By contrast, most $Q$-associated variants reported in the GWAS catalogue had weak bias (See Figure \ref{Pub_30}), with three exceptions.
 One study that reports associations with seven highly biased $Q$-associated variants considered copy number of Epstein-Barr virus (EBV) sequence in the 1kGP as a phenotype \citep{Mandage2017}. 
-The authors noted that these seven variants were not flanked by LD peaks and were correctly removed from downstream analyses -- though still included in the NHGRI-EBI Catalog \citep{Mandage2017}.
+These seven variants were not flanked by LD peaks and were correctly removed from downstream analyses -- though still included in the NHGRI-EBI Catalog \citep{Mandage2017}.
 It is plausible that the EBV copy number phenotype is sensitive to mapping and confounded by the same technical artefacts that lead to biased SNP calling.
 
 \begin{table}[h!]
@@ -337,7 +337,7 @@ However, cleaning up existing databases is also important to avoid generating sp
 The present findings suggest that a substantial fraction of data from the final release of the 1kGP project is overdue for retirement or re-sequencing.
 
 \section{Author's Note}
-\todo{While reviewing our manuscript for publication, in response to our pre-print, the New York Genome Center announced that they had resequenced the original 1kGP dataset in a yet to be published dataset.}
+\todo{While revising our manuscript for publication, in response to our pre-print, the New York Genome Center announced that they had resequenced the original 1kGP dataset in a yet to be published dataset.}
 
 \section{Methods}
 \subsection{Code and data availability}
@@ -418,6 +418,7 @@ The VCF file returned from the server was then downloaded and used to search for
 
 \section{Acknowledgments}
 We would like to thank Kelly Harris for sharing her mutation spectrum scripts.
+\todo{We would like to thank Rajendra Mandage, Gabriel Santpere and Arcadi Navarro for sharing more details relating to the results from their publication.}
 We would also like to thank the members of the Gravel lab for their help with coding and useful discussions.
 
 \bibliography{Legacy}
