update to acknowledgments

--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -336,9 +336,6 @@ Given rapid technological progress, the focus of genomic research is naturally o
 However, cleaning up existing databases is also important to avoid generating spurious results. 
 The present findings suggest that a substantial fraction of data from the final release of the 1kGP project is overdue for retirement or re-sequencing.
 
-\section{Author's Note}
-\todo{While revising our manuscript for publication, in response to our pre-print, the New York Genome Center announced that they had resequenced the original 1kGP dataset in a yet to be published dataset.}
-
 \section{Methods}
 \subsection{Code and data availability}
 Since this data is primarily performed using publicly available data, we provide fully reproducible and publicly available on \href{https://github.com/LukeAndersonTrocme/LegacyData}{GitHub}.
@@ -417,8 +414,7 @@ We used the genotyped data from the 1kGP Omni 2.5M chip genotype data.
 The VCF file returned from the server was then downloaded and used to search for the number of significant variants successfully imputed. 
 
 \section{Acknowledgments}
-We would like to thank Kelly Harris for sharing her mutation spectrum scripts.
-\todo{We would like to thank Rajendra Mandage, Gabriel Santpere and Arcadi Navarro for sharing more details relating to the results from their publication.}
+We would like to thank K. Harris for sharing her mutation spectrum scripts, F. Mafessoni, G. Santpere and A. Navarro for feedback on earlier versions of the manuscript.
 We would also like to thank the members of the Gravel lab for their help with coding and useful discussions.
 
 \bibliography{Legacy}
