--- a/PlottingScripts/ProcessedData/ScoopCheck.Rmd
+++ b/PlottingScripts/ProcessedData/ScoopCheck.Rmd
@@ -150,8 +150,8 @@ nrow(merged_regression_unmasked)
 
 nrow(merged_regression_masked)
 
-merged_regression_unmasked$strict_mask <- "Pass strict mask"
-merged_regression_masked$strict_mask <- "Fail strict mask"
+merged_regression_unmasked$strict_mask <- paste0("Pass strict mask (",nrow(merged_regression_unmasked),")")
+merged_regression_masked$strict_mask <- paste0("Fail strict mask (",nrow(merged_regression_masked),")")
 
 merged_regression <- rbind(merged_regression_masked, merged_regression_unmasked)
 ```
@@ -222,6 +222,23 @@ print(paste("missing in Mafessoni (Fail): ",nrow(m_maf), "or : ", nrow(m_maf)/nr
 print(paste("missing in ours (Fail): ",nrow(m_us), "or : ",nrow(m_us)/nrow(f)*100))
 print(paste("present in both (Fail): ",nrow(both), "or : ",nrow(both)/nrow(f)*100))
 print(paste("total (Fail): ", nrow(f)))
+
+
+m_maf <- to_plot %>%
+           filter(pvalue_glm_filt == 1 & Adjusted_Log10p > 2)
+
+#missing in ours
+m_us <- to_plot %>%
+           filter(pvalue_glm_filt < 1 & Adjusted_Log10p < 2)
+
+#present in both
+both <- to_plot %>%
+           filter(pvalue_glm_filt < 1 & Adjusted_Log10p > 2)
+
+print(paste("missing in Mafessoni (total): ",nrow(m_maf), "or : ", nrow(m_maf)/nrow(to_plot)*100) )
+print(paste("missing in ours (total): ",nrow(m_us), "or : ",nrow(m_us)/nrow(to_plot)*100))
+print(paste("present in both (total): ",nrow(both), "or : ",nrow(both)/nrow(to_plot)*100))
+print(paste("total (total): ", nrow(to_plot)))
 ```
 
 ```{r}
