updated supplementary figure text

--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -471,8 +471,10 @@ In these plots we are comparing the deviance from the null model in the 15,270 v
 \centering
 \includegraphics[width=13cm,keepaspectratio]{../Figures/Mafessoni_MutSpect.jpg}
 \caption{ \textbf{A} Comparison of the p-values from the association to unusual LD from \cite{mafessoni2018turning} and the p-values from the GCAT association test to quality metrics.
-There are a total of 42,307 variants in this plot with only 1,279 ( 3\% ) are statistically significant in both test.
+There are a total of 42,307 variants in this plot with only 1,279 ( 3\% ) are statistically significant in both tests.
 There are 23,111  variants ( 55\% ) that are $Q$-associated but not LD-associated and 17,917 ( 42\% ) that are LD-associated but not $Q$-associated.
+For the 21,416 variants that pass the strict mask, 629 ( 3\% ) variants are both $Q$-associated and LD-associated; 8,495 variants ( 40\% ) are $Q$-associated but not LD-associated and 12,292 ( 57\% ) are LD-associated but not $Q$-associated.
+For the 14,616 variants that don't pass the strict mask, 650 ( 3\% ) variants are both $Q$-associated and LD-associated; 14,616 variants ( 70\% ) are $Q$-associated but not LD-associated and 5,625 ( 27\% ) are LD-associated but not $Q$-associated.
 \textbf{B} Mutation spectrum of the variants significantly associated to unusual LD from \cite{mafessoni2018turning}. }  
 \label{Mafessoni_MutSpect}
 \end{figure}
@@ -486,7 +488,7 @@ There are 23,111  variants ( 55\% ) that are $Q$-associated but not LD-associate
 
 \begin{figure}[tbp]
 \centering
-\includegraphics[width=15cm,keepaspectratio]{../Figures/VariantDensity.jpg}
+\includegraphics[width=14cm,keepaspectratio]{../Figures/VariantDensity.jpg}
 \caption{\textbf{A} The number of $Q$-associated variants per 10kb window across the genome.
 Grey bars indicate regions within and black bars indicate regions outside the 1000 Genomes Project strict mask.
 One region not flagged by the 1000 Genomes Project strict mask in chromosome 17 has more than 10 variants per window.
