--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -192,11 +192,11 @@ The mutational 3-mer substitution patterns of this list of variants from the GCA
 There is also an enrichment of mutations from TAC, TCT, and TGT to the homonucleotide TTT (Figure \ref{strict_gcat_mutational_enrichment}).
 
 
-A recent publication by Mafessoni et al. also identified a batch effect in the 1kGP using a method that uses linkage disequilibrium rather than quality metrics to identify 19,196 suspicious variants with 67\% of them passing the 1kGP strict mask \citep{mafessoni2018turning} (Figure \ref{Mafessoni_MutSpect}).
-They identify 17,917 variants significantly associated to abnormal LD patterns that are not associated to $Q$ \ref{Mafessoni_MutSpect}.
-We find that 1,279 ( 3\% ) of the variants they identified are also in our list of suspicious variants and have correlated p-values to those identified using the GCAT method \ref{Mafessoni_MutSpect}.
+A recent publication by Mafessoni et al. also identified a batch effect in the 1kGP using a method that uses linkage disequilibrium rather than quality metrics to identify 19,196 suspicious variants with 67\% of them passing the 1kGP strict mask \citep{mafessoni2018turning} (Figure \ref{Mafessoni_MutSpect}A).
+They identify 17,917 variants significantly associated to abnormal LD patterns that are not associated to $Q$.
+We find that 1,279 ( 3\% ) of the variants they identified are also in our list of suspicious variants and have correlated p-values to those identified using the GCAT method.
 We also find 23,111 $Q$-associated variants that are not associated to abnormal LD patterns. 
-Interestingly, the variants identified my Mafessoni et al. are not enriched in the mutational spectra described above (Figure \ref{Mafessoni_MutSpect}).
+Interestingly, the variants identified my Mafessoni et al. are not enriched in the mutational spectra described above (Figure \ref{Mafessoni_MutSpect}B).
 These results indicate that there may a multitude of batch effects in the 1kGP that can only be identified using a suite of association tests.
 
 
