--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -210,7 +210,7 @@ These results indicate that there may a multitude of batch effects in the 1kGP t
 \end{tabular}
 \caption{Number and proportion of $Q$-associated variants passing the 1000 Genomes Project strict mask per category. 
 Variants that are flagged by the 1000 Genomes Project nested repeat mask file were analyzed separately for FDR calculation. SNPs and INDELs were also analyzed separately.
-A total of 15,270 are statistically significantly associated to $Q$. 
+A total of 15,270 are statistically significantly associated to $Q$ and pass the 1kGP strict mask. 
 The grey text is the proportion of $Q$-associated variants per category.
 The number of variants included in the analysis for SNPs, SNPs in repeat regions, INDELs and INDELs in repeat regions are  19,846,786, 6,312,620, 1,770,315 and 586,342 respectively.}
 \label{sigTable}
