--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -268,7 +268,7 @@ To distinguish between variants with weak but significant association with $Q$ f
 The majority (92.7\%) of the $Q$-associated variants are strongly biased in that they are more than twice as frequent in individuals with low-$Q$ compared to high-$Q$ data.
 By contrast, most $Q$-associated variants reported in the GWAS catalogue had weak bias (See Figure \ref{Pub_30}), with three exceptions.
 One study that reports associations with seven highly biased $Q$-associated variants considered copy number of Epstein-Barr virus (EBV) sequence in the 1kGP as a phenotype \citep{Mandage2017}. 
-These seven variants were not flanked by LD peaks and were correctly removed from downstream analyses -- though still included in the NHGRI-EBI Catalog \citep{Mandage2017}.
+These seven variants were not flanked by LD peaks and were correctly removed from downstream analyses however, they were still included in the NHGRI-EBI Catalog \citep{Mandage2017}.
 It is plausible that the EBV copy number phenotype is sensitive to mapping and confounded by the same technical artefacts that lead to biased SNP calling.
 
 \begin{table}[h!]
